test/files/neg/t11136.check
t11136.scala:12: error: overriding final override def c(x: Int): Int (defined in trait SO);
 override def c(x: Int): Int (defined in trait SOIO) cannot override final member
class L extends AS with SOSO // error expected: c definined in SOIO overrides final method c in SO
      ^
one error found
